--- a/src/views/create-pass.ejs
+++ b/src/views/create-pass.ejs
@@ -6,8 +6,8 @@
     <!-- View Port -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS -->
-    <link rel="stylesheet" href="/public/styles/global.css">
-    <link rel="stylesheet" href="/public/styles/home.css">
+    <link rel="stylesheet" href="/styles/global.css">
+    <link rel="stylesheet" href="/styles/home.css">
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
     <div id="home" class="content">
         <header>
             <a href="/">
-                <img src="public/images/logo.svg" alt="Rocket.Q Logo"/>
+                <img src="/images/logo.svg" alt="Rocket.Q Logo"/>
             </a>        </header>
         <div id="bg">
             <div class="ball top"></div>
@@ -31,7 +31,7 @@
                         <label class="sr-only" for="room-id">Insira uma senha</label>
                         <input type="password" name="" id="room-pass" placeholder="Insira uma senha">
                         <button class="button">
-                            <img src="/public/images/enter-room.svg" alt="Criar Sala">
+                            <img src="/images/enter-room.svg" alt="Criar Sala">
                             Criar Sala
                         </button>
                     </form>
