--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -17,7 +17,7 @@
     <div id="home" class="content">
         <header>
             <a href="/">
-                <img src="images/logo.svg" alt="Rocket.Q Logo"/>
+                <img src="/images/logo.svg" alt="Rocket.Q Logo"/>
             </a>        </header>
         <div id="bg">
             <div class="ball top"></div>
@@ -31,7 +31,7 @@
                         <label class="sr-only" for="room-id">Código da sala</label>
                         <input type="number" name="" id="room-id" placeholder="Código da sala">
                         <button class="button">
-                            <img src="images/enter-room.svg" alt="Entrar na sala">
+                            <img src="/images/enter-room.svg" alt="Entrar na sala">
                             Entrar na sala
                         </button>
                     </form>
@@ -46,7 +46,7 @@
                 <section>
                     <h2>Criei sua prórpria sala de forma fácil</h2>
                     <a href="/create-room.html" class="button outlined">
-                        <img src="images/users.svg" alt="Criar Sala"> 
+                        <img src="/images/users.svg" alt="Criar Sala"> 
                         Criar Sala
                     </a>
                 </section>
