--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -6,9 +6,9 @@
     <!-- View Port -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS -->
-    <link rel="stylesheet" href="/public/styles/global.css">
-    <link rel="stylesheet" href="/public/styles/room.css">
-    <link rel="stylesheet" href="/public/styles/modal.css">
+    <link rel="stylesheet" href="/styles/global.css">
+    <link rel="stylesheet" href="/styles/room.css">
+    <link rel="stylesheet" href="/styles/modal.css">
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
@@ -18,15 +18,15 @@
     <div id="room" class="content">
         <header>
             <a href="/">
-                <img src="public/images/logo.svg" alt="Rocket.Q Logo"/>
+                <img src="/images/logo.svg" alt="Rocket.Q Logo"/>
             </a>
             <div class="buttons">
                 <div class="button outlined" id="room-id">
                     #323243
-                    <img src="public/images/copy.svg" alt="Copiar número da sala">
+                    <img src="/images/copy.svg" alt="Copiar número da sala">
                 </div>
                 <a href="#"  class="button">
-                    <img src="public/images/users-white.svg" alt="Criar Sala">
+                    <img src="/images/users-white.svg" alt="Criar Sala">
                     Criar Sala
                 </a>
             </div>
@@ -40,7 +40,7 @@
 
                     <footer>
                         <div>
-                            <img src="/public/images/lock.svg" alt="Cadeado">
+                            <img src="/images/lock.svg" alt="Cadeado">
                             Esta pergunta é anônima
                         </div>
                         <button>Enviar</button>
@@ -54,7 +54,7 @@
                     <div class="question-wrapper">
                         <div class="question-content">
                             <div class="user">
-                                <img src="public/images/user.svg" alt="Avatar">
+                                <img src="/images/user.svg" alt="Avatar">
                             </div>
                             <div class="question">
                                 <p>Qual a diferença entre const. var e let no javascript</p>
@@ -62,11 +62,11 @@
                         </div>
                         <div class="actions">
                             <a href="#" class="check">
-                                <img src="/public/images/check.svg" alt="Marcar como lida">
+                                <img src="/images/check.svg" alt="Marcar como lida">
                                 Marcar como linda
                             </a>
                             <a href="#" class="delete">
-                                <img src="/public/images/trash.svg" alt="Excluir">
+                                <img src="/images/trash.svg" alt="Excluir">
                                 Excluir
                             </a>
                         </div>
@@ -77,7 +77,7 @@
                     <div class="question-wrapper read">
                         <div class="question-content">
                             <div class="user">
-                                <img src="public/images/user.svg" alt="Avatar">
+                                <img src="/images/user.svg" alt="Avatar">
                             </div>
                             <div class="question">
                                 <p>Qual a diferença entre const. var e let no javascript</p>
@@ -85,7 +85,7 @@
                         </div>
                         <div class="actions">
                             <a href="#" class="delete">
-                                <img src="/public/images/trash.svg" alt="Excluir">
+                                <img src="/images/trash.svg" alt="Excluir">
                                 Excluir
                             </a>
                         </div>
