--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -12,6 +12,8 @@
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+    <!--SCRIPTS-->
+    <script src="/scripts/main.js" defer type="module"></script>
     <title>Rocket.Q - Perguntas e Respostas </title>
 </head>
 <body>
@@ -106,7 +108,7 @@
                 <label class="sr-only" for-id="password">Digite sua senha admin</label>
                 <input id="password" type="password" name="password" placeholder="Digite sua senha">
                 <div class="buttons">
-                    <div class="button grey">Cancelar</div>
+                    <div class="button grey cancel">Cancelar</div>
                     <button class="red">Sim, excluir</button>
                 </div>
             </form>
